# Conference-Room-Reservation

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  database.py  main.py
api/models/: reserved.py  user.py
api/routers/: reserved.py  user.py
api/schemas/: reserved.py  user.py
app/: .gitignore  Dockerfile  package-lock.json  package.json
app/app/: globals.css  layout.tsx  page.tsx
app/app/(pages)/about/: page.tsx
app/app/(pages)/dashboard/: getTotalAmountByMonthForThePastYear.ts  getTotalAmountByRoomOverThePastYear.ts  getTotalAmountForEachRoomTheNetTwoMonth.ts  getUsageInTheNextMonth_for_CircleData.ts  getUsageInThePastYear_for_CircleData.ts  page.tsx
app/app/(pages)/login/: page.tsx
app/app/(pages)/signup/: page.tsx
app/app/(pages)/top/: page.tsx
app/app/api/adminGetAllReservationInfo/: route.ts
app/app/api/adminGetAllUserInfo/: route.ts
app/app/api/checkout_sessions/: route.ts
app/app/api/createReservation/: route.ts
app/app/api/createUser/: route.ts
app/app/api/deleteReservation/: route.ts
app/app/api/deleteReservationUserHave/: route.ts
app/app/api/deleteUserByUserId/: route.ts
app/app/api/getReservationDataByUserId/: route.ts
app/app/api/loginUser/: route.ts
app/app/components/: HeaderAdmin.tsx  Reservation.tsx  ReservationByAdminForGuest.tsx  Reservation_isAdmin.tsx  Room.tsx  SidePage.tsx  SignIn.tsx  SignUp.tsx  TopPage.tsx  TopPageImage.tsx
app/app/data/: roomData.ts
app/app/hooks/: useAuth.ts  useLogout.ts
app/app/utils/: CheckAccessToken.ts  CheckPriceId.ts  Validate.ts  functions.ts
(+15 files in other folders)
